push latest swagger for free course documentation
