# swagger.yaml
@@ -63,6 +63,10 @@ info:
         - Endpoint: `/api/v1/accounts/updateprofile/:id`
         - Deskripsi: Memperbarui akun profile user
 
+    14. Update password:
+        - Endpoint: `/api/v1/accounts/updatepassword/:id`
+        - Deskripsi: Memperbarui password
+
   contact:
     email: livercourse.7@gmail.com
   version: 1.0.0
@@ -459,7 +463,7 @@ paths:
       summary: Get Me
       description: Show user data
       parameters:
-        - in: query
+        - in: path
           name: userId
           schema:
             type: integer
@@ -820,6 +824,109 @@ paths:
                   $ref: '#/components/schemas/CoursePopulerModel'
         '400': 
           description: Invalid name
+  /course/free?categoryId=&level=&sortBy=:
+    get:
+      tags:
+        - Courses
+      operationId: get-fetch-free-course
+      summary: Get free course
+      description: Retrieves free course based category, level (Beginner, Intermediate, Advanced), and sort by (latest, populer)
+      parameters:
+        - in: query
+          name: categoryId
+          schema:
+            type: integer
+          required: true
+          description: The ID of the Category to retrieve.
+        - in: query
+          name: level
+          schema:
+            type: string
+          required: false
+          description: choose a level (Beginner, Intermediate, Advanced)
+        - in: query
+          name: sortBy
+          schema:
+            type: string
+          required: false
+          description: choose a sortBy (latest, populer)
+      responses:
+        "200":
+          description: Successful operation
+          content:
+            application/json:
+              schema:
+                allOf:
+                  - $ref: "#/components/schemas/BasicResponse"
+                  - type: object
+                    properties:
+                      status:
+                        type: boolean
+                        example: true
+                      message:
+                        type: string
+                        example: "Show Free Course"
+                      data:
+                        type: object
+                        properties:
+                          courses:
+                            $ref: "#/components/schemas/FreeCourseModel"
+                            type: object
+                          category_id:
+                            type: integer
+                            example: 1
+                          course_id:
+                            type: integer
+                            example: 10
+                          assignedAt:
+                            type: string
+                            example: "2023-12-12T17:15:36.213Z"
+                          category:
+                            type: array
+                            items:
+                              type: object
+                              properties:
+                                name:
+                                  type: integer
+                                  example: "JavaScript"
+                          course:
+                            type: object
+                            properties:
+                              id:
+                                type: string
+                                example: 10
+                              name:
+                                type: string
+                                example: "Convert HTML ke React JS Framework"
+                              image:
+                                type: string
+                                example: "https://ik.imagekit.io/livercourse/1702055226246_2_xswM7Y5.jpeg"
+                              price:
+                                type: string
+                                example: "0"
+                              level:
+                                type: string
+                                example: "Beginner"
+                              rating:
+                                type: integer
+                                example: 5
+                              total_lesson:
+                                type: integer
+                                example: 9
+                              total_duration:
+                                type: integer
+                                example: 100
+                              mentor:
+                                type: array
+                                items:
+                                  type: object
+                                  properties:
+                                    id:
+                                      type: integer
+                                      example: 6
+                                    name:
+                                      type: string
+                                      example: "Liandi"
   /course/filter:
     get:
       tags:
@@ -1229,7 +1336,7 @@ components:
           example: "https://ik.imagekit.io/livercourse/1702055226246_2_xswM7Y5.jpeg"
         price:
           type: string
-          example: "200.000"
+          example: "0"
         level:
           type: string
           example: "Beginner"
@@ -1253,6 +1360,65 @@ components:
               name:
                 type: string
                 example: "Wawan"
+    FreeCourseModel:
+      title: FreeCourseModel
+      type: object
+      properties:
+        category_id:
+          type: integer
+          example: 1
+        course_id:
+          type: integer
+          example: 10
+        assignedAt:
+          type: string
+          example: "2023-12-12T17:15:36.213Z"
+        category:
+          type: array
+          items:
+            type: object
+            properties:
+              name:
+                type: integer
+                example: "JavaScript"
+        course:
+          type: object
+          properties:
+            id:
+              type: string
+              example: 1
+            name:
+              type: string
+              example: "Node JavaScript Dasar"
+            image:
+              type: string
+              example: "https://ik.imagekit.io/livercourse/1702055226246_2_xswM7Y5.jpeg"
+            price:
+              type: string
+              example: "0"
+            level:
+              type: string
+              example: "Beginner"
+            rating:
+              type: integer
+              example: 5
+            total_lesson:
+              type: integer
+              example: 12
+            total_duration:
+              type: integer
+              example: 120
+            mentor:
+              type: array
+              items:
+                type: object
+                properties:
+                  id:
+                    type: integer
+                    example: 1
+                  name:
+                    type: string
+                    example: "Wawan"
     CourseModelDetail:
       title: CourseModelDetail
       type: object
